# kettle

./: .gitignore  Cargo.toml  LICENSE  README.md  TODOsForNerds  build.rs  linker.ld  run-x86_64.sh  run.sh  setup.sh
.cargo/: config.toml
kettle-boot/: Cargo.toml  run-x86_64.sh
kettle-boot/.cargo/: config.toml
kettle-boot/src/: main.rs
kettle-init/: Cargo.toml
kettle-init/.cargo/: config.toml
kettle-init/src/: main.rs
kettle-kernel/: Cargo.toml  build.rs
kettle-kernel/.cargo/: config.toml
kettle-kernel/src/: main.rs
kettle-kernel/src/x86_64/interrupts/: mod.rs
src/: gdt.rs  interrupts.rs  logger.rs  main.rs  panic.rs
src/interrupts/: exceptions.rs
src/x86_64/interrupts/: exceptions.rs  idt.rs  mod.rs  pic.rs
