[package]
name = "kettle-boot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[target.x86_64-unknown-uefi]
dependencies = { x86_64 = "0.14.7", uefi = { version = "0.17.0", features = ["exts"] }, uefi-services = "0.14.0" }
