[package]
name = "kettle-kernel"
version = "0.1.0"
edition = "2021"
license = "GPLv3-only"

[dependencies]
font8x8 = { version = "0.3.1", features = ["unicode"], default-features = false }
spin = "0.9.2"
conquer-once = { version = "0.3.2", default-features = false }
lazy_static = { version = "1.4", features = ["spin_no_std"] }

[target.x86_64-kettle-kernel]
dependencies = { x86_64 = "0.14.7", pic8259 = "0.10.2" }
